src/public/sass/layout/_footer.scss
.five-star {

    .icon-five-star {
        line-height: 0;
        height: 143px;
        width: 90px;
    }
}
.five-star--bottom {

    @include bp($foundation-small, $tablet) {
        bottom: 350px;
        right: 8%;
        position: absolute;
    }
    @include bp($foundation-med, $tablet) {
        left:8%;
        bottom: 65px;
    }
    @include bp($tablet) {
        display: none;
    }
}
.five-star--top {
    display: none;
    line-height: 0;
    text-align: center;
    width: 10%;

    @include bp($tablet) {
        display: block;
    }
}

.footer-grey-border {
    background: $color-grey-dark-border;
    bottom: 155px;
    display: block;
    height: 1px;
    left: 0;
    position: absolute;
    right: 0;

    @include bp($foundation-med) {
        bottom: 45px;
    }
    @include bp($tablet) {
        display: none !important;
    }
}

.footer-container {
    margin: 0 auto;
    max-width: $page-max-width;
    width: 100%;
}

.footer-row {
    margin: 0 auto;
    max-width: $page-max-width;
    padding: {
        left: 8%;
        right: 8%;
    }
    text-align: left;

    a {
        @extend %no-underline;
    }

    @include bp($mobile-landscape) {
        font-size: .875em;
    }
    @include bp($foundation-large) {
        padding: {
            left: 2%;
            right: 2%;
        }
    }
    @include bp($my-very-large) {
        padding: {
            left: 4%;
            right: 4%;
        }
    }
}
.footer-row--bottom {
    background: $color-footer-bg;
    padding: {
        bottom: 3em;
        top: 3em;
    }

    .copyright {
        color: $color-social-icons;
        width: 10em;

        @include bp($foundation-small, $tablet) {
            bottom: 15px;
            left: 8%;
            position: absolute;
        }
        @include bp($foundation-med, $tablet) {
            left: 8%;
            bottom: 11px;
        }
        @include bp($tablet) {
            float: left;
        }
        @include bp($foundation-large) {
            font-size: .875em;
            top: 2px;
        }

    }
    .nav-footer {
        margin: 0 auto;
        max-width: 800px;

        .nav-footer__container {
            margin: 0 auto;
            text-align: center;
            white-space: nowrap;
            width: 100%;

            .nav-major {
                text-align: left;

                a {
                    @extend %upper;
                    color: $color-reverse;

                    @include bp($foundation-large) {
                        margin-right: 6%;
                    }
                    @include bp($my-large) {
                        margin-right: 14%;
                    }
                    @include bp($my-very-large) {
                        margin-right: 15%;
                    }
                }
                a:last-child {
                    margin-right: 0;
                }

                @include bp($foundation-small, $foundation-large) {
                    line-height: 2.125;
                    width: 60%;
                }
                @include bp($foundation-med) {
                    width: 50%;
                    padding-left:5%;
                }
                @include bp($tablet) {
                    width: 75%;
                    padding-left:5%;
                }
                @include bp($foundation-large) {
                    margin-right: 5%;
                    min-width: 40%;
                    width:50%;
                    padding-left:0;
                }
                @include bp($my-large) {
                    margin-right: 6%;
                    min-width: 30%;
                }
                @include bp($my-very-large) {
                    margin-right: 7%;
                    min-width: 33%;
                }
                a:last-child {
                    margin-right: 0;
                }
            }
            .nav-minor {
                text-align: left;

                a {
                    color: $color-social-icons;

                    @include bp($foundation-large) {
                        margin-right: 5%;
                    }
                    @include bp($my-large) {
                        margin-right: 11%;
                    }
                    @include bp($my-very-large) {
                        margin-right: 12%;
                    }
                }

                @include bp($foundation-small, $foundation-large) {
                    line-height: 2.125;
                    width: 40%;
                }
                @include bp($foundation-med, $tablet) {
                    width: 50%;
                }
                @include bp($foundation-large) {
                    min-width: 30%;
                }
                @include bp($my-very-large) {
                    min-width: 40%;
                }
            }
            .nav-major,
            .nav-minor {
                vertical-align: top;
            }

            @include bp($foundation-small, $foundation-large) {
                line-height: 0;
            }
            @include bp($tablet, foundation-large) {
                text-align: left;
            }
        }

        a {
            clear: left;
            display: block;
            float: left;

            @include bp($foundation-large) {
                clear: none;
                display: inline;
                float: none;
            }
        }
        nav {
            display: inline-block;
        }

        @include bp($foundation-small, $foundation-med) {
            width: 100%;
        }
        @include bp($foundation-med, $tablet) {
            margin: 0 0 0 auto;
            width: 67%;
        }
        @include bp($tablet, $foundation-large) {
            width: 40%;
        }
        @include bp($my-large) {
            max-width: 1200px;
        }
    }
    .social {

        .icon {
            height: 18px;
            margin: 0 .25em;
            width: 18px;

            @include bp($foundation-small, $foundation-med) {
                height: 20px;
                width: 20px;
            }
        }
        .social__link:hover {
            @extend %no-underline;
        }

        @include bp($foundation-small, $foundation-med) {
            bottom: 15px;
            left: 58%;
            position: absolute;
        }
        @include bp($foundation-med, $tablet) {
            bottom: 8px;
            left: 63%;
            position: absolute;
        }
        @include bp($tablet) {
            float: right;
        }
    }

    @include bp($foundation-small, $foundation-med) {
        padding-bottom: 70px;
    }
    @include bp($foundation-med, $tablet) {
        padding-bottom: 80px;
    }
    @include bp($foundation-large) {
        padding: {
            bottom: 1.5em;
            top: 1.5em;
        }
    }
}
.footer-row--top {
    @extend %border-top-grey;
    background: $color-reverse-heading;
    padding: {
        bottom: 3em;
        top: 3em;
    }

    .dealer-info-container {
        color: $color-grey;
        display: inline-block;
        font-family: $font-family-display;
        line-height: 2;
        min-height: 90px;
        padding-right:100px;
        width:100%;

        a, a:visited {
            color: $color-grey;
        }

        .dealer-info {
            display: inline-block;
            width: 100%;

            @include bp($foundation-med) {
                width: 66%;
            }
        }
        .dealer-info,
        .hours {
            vertical-align: top;
        }
        .dealer-info__header {
            color: $color-default;
        }
        .address,
        .numbers {
            display: inline-block;
            margin-bottom: 1.75em;
            width: 100%;

            @include bp($foundation-med) {
                display: inline-block;
                margin-bottom: 0;
                vertical-align: top;
                width: 55%;
                padding-right:5%;
            }
        }
        .numbers {

            @include bp($foundation-med) {
                width:39%;
                padding-right:1%;
                //margin-top: 2em;
            }
        }
        .hours {
            display: inline-block;
            width: 100%;

            @include bp($foundation-med) {
                width: 31%;
                padding-right:2%;
            }
        }
        
        @include bp($foundation-med) {
            padding-right:0;
        }
        @include bp($tablet) {
            width: 90%;
        }
        @include bp($foundation-large) {
            width: 65%;
        }
    }
    .dealer-info-container > * {

        @include bp($foundation-large) {
            vertical-align: top;
        }
    }
    .logo {
        @extend %upper;
        display: none;
        margin-right: 5%;
        padding-right: 4%;
        text-align: left;
        width: 20%;

        img {
            max-height: 120px;
            max-width: 200px;
        }

        @include bp($foundation-large) {
            display: block;
        }
    }

    @include bp($tablet) {

        .logo,
        .dealer-info-container,
        .five-star--top {
            float: left;
        }
    }
}
.footer-wrapper {
    width: 100%;
}

.ps-footer {

    @include bp($foundation-small, $tablet) {
        background-color: #eee;
        padding-bottom: 3.75em;
    }
}

